   __declspec(dllimport).

 - We no longer use the flag --rpath when building ECL. Given the fact that
   ECL now assumes a standard Unix filesystem structure, this should pose no
   problem. For nonstandard locations, you will have to define LD_LIBRARY_PATH

 - ECL now allows directory components and pathname names and types to have
   colon in their strings. A leading colon disambiguates in the namestring
   will be use to disambiguate.
	":foo:bar"		NAME="foo:bar"
	"foo:bar"		DEVICE="foo", NAME="bar" (physical pathname)
	"foo:bar"		HOST="foo", NAME="bar" (logical pathname)
	"/e/foo:bar"		DIR=(:ABSOLUTE "e"), NAME="foo:bar"
	"/e/foo:bar/txt"	DIR=(:ABSOLUTE "e" "foo:bar"), NAME="txt"

 - LOAD-TIME-VALUE would not work as expected when its argument was a variable
   or a constant.

 - MACHINE-TYPE, MACHINE-INSTANCE, SOFTWARE-VERSION and similar functions are
   now compliant and output NIL when they cannot guess the right information.
   This information is gathered from the environment variables HOSTNAME
   and HOSTTYPE (Unix), COMPUTERNAME, PROCESSOR_ARCHITECTURE, PROCESSOR_LEVEL
   (Windows) and the output of the system function uname(), if available.

 - LOG lost accuracy when applied to a complex number where the either the
   real or the imaginary part was much larger than the other one.

 - Building without GMP is again supported.

 - Bytecode functions can now be externalized in C compiled files.

 - (FUNCALL (LOAD-TIME-VALUE ...) ...) forced the evaluation of the argument to
   LOAD-TIME-VALUE. LOAD-TIME-VALUE is now implemented as a special operator
   and not as a macro.

* System design:

 - We introduce a new kind of lisp objects, the stack frames. These are objects
   with dynamical extent, which work as adjustable arrays and are mainly used
   for collecting the arguments of a function, in MAP, MAPCAR, APPLY, FUNCALL,
   MULTIPLE-VALUE-CALL, etc.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***